ChangeLog
commit a357dfa0af
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Oct 8 08:32:33 2017 +0000

    [Automatic update for 2017-10-08]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: I829a06c2da67e8d5f0082c3b35913151dde8b0a4
    Reviewed-on: https://code.wireshark.org/review/23862
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit 45263ff544
Author: Gerald Combs <gerald@wireshark.org>
Date:   Fri Oct 6 15:52:20 2017 -0700

    Update the release notes for 2.0.16.
    
    Change-Id: I089c0db031796a94dbe47e7eb22bf30cf38a9028
    Reviewed-on: https://code.wireshark.org/review/23856
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit a7678d2196
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Oct 1 08:43:04 2017 +0000

    [Automatic update for 2017-10-01]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: I0b75ede897327175ad0f84d4291d45ecbb793829
    Reviewed-on: https://code.wireshark.org/review/23797
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit e209b4c527
Author: Guy Harris <guy@alum.mit.edu>
Date:   Thu Sep 28 12:23:12 2017 -0700

    Have dissect_7bit_string() return a const gchar *.
    
    Nobody needs to modify the string, and nobody needs to free it - which
    is good, because it could be a string constant which can neither be
    modified nor freed.
    
    Change-Id: I13d4239557698e4631e8f8b062d436a2e94d5eca
    Reviewed-on: https://code.wireshark.org/review/23773
    Petri-Dish: Guy Harris <guy@alum.mit.edu>
    Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
    Reviewed-by: Guy Harris <guy@alum.mit.edu>

commit c1ea97241d
Author: Gerald Combs <gerald@wireshark.org>
Date:   Thu Sep 28 16:49:46 2017 +0000

    DMP: Work around a gcc "write-strings"-induced warning
    
    Add a cast in order to squelch
    
    packet-dmp.c: In function ‘dissect_7bit_string’:
    packet-dmp.c:1657:13: error: assignment discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
         decoded = "";
                 ^
    
    Change-Id: Ib333e1a57b94a5bfadfddc463e881ffe880da759
    Reviewed-on: https://code.wireshark.org/review/23772
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit 458856f052
Author: Guy Harris <guy@alum.mit.edu>
Date:   Sun Sep 24 13:01:49 2017 -0700

    Replace DISSECTOR_ASSERT(hfinfo->type == FT_STRING) with DISSECTOR_ASSERT_FIELD_TYPE.
    
    That produces better error messages, giving the name of the offending
    field.
    
    Change-Id: I155ac29c68ecd7811cc9752980db9cdc37fea72e
    Reviewed-on: https://code.wireshark.org/review/23685
    Reviewed-by: Guy Harris <guy@alum.mit.edu>
    (cherry picked from commit 7517b73e74bd3a425406e08fa0ce667a655ee049)
    Reviewed-on: https://code.wireshark.org/review/23688

commit 7f238c95fe
Author: Guy Harris <guy@alum.mit.edu>
Date:   Sun Sep 24 12:36:53 2017 -0700

    Move DISSECTOR_ASSERT_FIELD_TYPE_IS_TIME after __DISSECTOR_ASSERT_FIELD_TYPE_IS_TIME().
    
    That's consistent with the other DISSECTOR_ASSERT_FIELD_TYPE... macros.
    
    Change-Id: I1f5711b29ae8a440b0529373eb7903ff122ea18e
    Reviewed-on: https://code.wireshark.org/review/23681
    Reviewed-by: Guy Harris <guy@alum.mit.edu>
    (cherry picked from commit a9963c45e79440094df221dfcb34b11ba94f0882)
    Reviewed-on: https://code.wireshark.org/review/23684

commit 4fa59f9e19
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Sep 24 08:28:15 2017 +0000

    [Automatic update for 2017-09-24]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: I93c0758846d9ccfb3e54bf5b8158eae1bbeade66
    Reviewed-on: https://code.wireshark.org/review/23672
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit bf1f1fd864
Author: Pascal Quantin <pascal.quantin@gmail.com>
Date:   Sun Sep 17 21:46:09 2017 +0200

    DMP: check 7bit string length before decoding it
    
    Bug: 14068
    Link: https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=3372
    Change-Id: Ib9ff63e2ef8d3c2546f357534c374a662e70e43c
    Reviewed-on: https://code.wireshark.org/review/23591
    Reviewed-by: Pascal Quantin <pascal.quantin@gmail.com>
    Petri-Dish: Pascal Quantin <pascal.quantin@gmail.com>
    Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
    Reviewed-by: Peter Wu <peter@lekensteyn.nl>
    (cherry picked from commit 8dbb21dfde14221dab09b6b9c7719b9067c1f06e)
    Reviewed-on: https://code.wireshark.org/review/23595
    Reviewed-by: Michael Mann <mmann78@netscape.net>

commit cf385c9068
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Sep 17 08:29:20 2017 +0000

    [Automatic update for 2017-09-17]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: Id2f80f71c2a446ecb1edbc1094be96aca2387693
    Reviewed-on: https://code.wireshark.org/review/23583
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit 3f7d5859ac
Author: Michael Mann <mmann78@netscape.net>
Date:   Thu Aug 17 20:30:01 2017 -0400

    Fix: Segfault when "Update list of packets in real time" is unchecked
    
    capture_file structure is not populated with "fixed" captures.  Qt menu
    presumes it has a populated capture_file structure.  Just have menu
    items be disabled until capture file is reloaded for display.
    
    Bug: 13024
    Change-Id: I9dfb5355c5d421f5344f97e1e9d5b4dd08b11c6e
    Reviewed-on: https://code.wireshark.org/review/23095
    Petri-Dish: Michael Mann <mmann78@netscape.net>
    Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
    Reviewed-by: Michael Mann <mmann78@netscape.net>
    (cherry picked from commit b4d8b68d7c9c0e3280a204dcfca9b57e66bffddd)
    Reviewed-on: https://code.wireshark.org/review/23514

commit 0ac9415d51
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Sep 10 08:32:51 2017 +0000

    [Automatic update for 2017-09-10]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: I71edd1936c084f6779038e8a4e589a9816594c25
    Reviewed-on: https://code.wireshark.org/review/23451
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit 15ae203496
Author: Pascal Quantin <pascal.quantin@gmail.com>
Date:   Wed Sep 6 15:14:44 2017 +0200

    Qt: fix RTP/IAX2 reverse stream export to CSV
    
    Bug: 14040
    Change-Id: Idadfbd3b60124b5f7ac4ace275db94b10daf010a
    Reviewed-on: https://code.wireshark.org/review/23409
    Petri-Dish: Pascal Quantin <pascal.quantin@gmail.com>
    Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
    Reviewed-by: Pascal Quantin <pascal.quantin@gmail.com>
    (cherry picked from commit d022091acfd4c9513a4f13973d7cdc7d7785c09e)
    Reviewed-on: https://code.wireshark.org/review/23414

commit 5a6cab4481
Author: Gerald Combs <gerald@wireshark.org>
Date:   Sun Sep 3 08:24:58 2017 +0000

    [Automatic update for 2017-09-03]
    
    Update manuf, services enterprise numbers, translations, and other items.
    
    Change-Id: I26fd0a454dee64300a1fad20b2870bc5a5a8f888
    Reviewed-on: https://code.wireshark.org/review/23372
    Reviewed-by: Gerald Combs <gerald@wireshark.org>

commit a7669ed6c4
Author: Gerald Combs <gerald@wireshark.org>
Date:   Tue Aug 29 12:38:06 2017 -0700

    2.0.15 → 2.0.16.
    
    Change-Id: I6c96fc3782775d45db3c6bd24cd66cdb37fe7e6c
    Reviewed-on: https://code.wireshark.org/review/23297
    Reviewed-by: Gerald Combs <gerald@wireshark.org>
